k8s-specs/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: vcs-sms
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /user/(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 10001
          
          - path: /server/(.*)
            pathType: Prefix
            backend:
              service:
                name: server-administration-service
                port:
                  number: 10002
